--- a/exercici1/estilsRellotges.css
+++ b/exercici1/estilsRellotges.css
@@ -1,7 +1,5 @@
 /* Aquest es el css de la pagina web */
 
-/* AJUSTOS PER TOTA LA PAGINA */
-
 img { /* Totes les imatges de la pagina web */
     width: 100%;
     height: auto;
@@ -9,7 +7,7 @@ img { /* Totes les imatges de la pagina web */
 }
 
 /* --------------------------------------------------------------------------------------- */
-/************************************ BODY **********************************************/
+/************************************** BODY **********************************************/
 /* ------------------------------------------------------------------------------------- */
 
 body { /* Ajustos que tindran tots els elements del body */
